force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Avg_Billing_Rate_USD_Hr__c.field-meta.xml
<CustomField>
    <fullName>Avg_Billing_Rate_USD_Hr__c</fullName>
    <description>This field is used to capture the average billing rate of the resources in USD. Data pulled directly from Cognizant&apos;s WinZone</description>
    <inlineHelpText>This field is used to capture the average billing rate of the resources in USD. Data pulled directly from Cognizant&apos;s WinZone</inlineHelpText>
    <label>Avg. Billing Rate (USD/Hr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>