force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Deal_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Deal_Duration_Months__c</fullName>
    <description>This field is used to enter the duration. Number of months the resources are allocated.</description>
    <inlineHelpText>This field is used to enter the duration. Number of months the resources are allocated. Data pulled from Cognizant Salesforce, WinZone</inlineHelpText>
    <label>Deal Duration (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>