force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Estimated_Deal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Deal_Close_Date__c</fullName>
    <inlineHelpText>The estimated date that this deal is anticipated to close.</inlineHelpText>
    <label>Estimated Deal Close Date</label>
    <type>Date</type>
</CustomField>