force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Expected_Revenue_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Start_Date__c</fullName>
    <description>The date we anticipate the project will start</description>
    <inlineHelpText>Anticipated project start date</inlineHelpText>
    <label>Expected Revenue Start Date</label>
    <type>Date</type>
</CustomField>