force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/First_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Year__c</fullName>
    <description>Estimated revenue in the first 12 months regardless of when the contract is signed. Data pulled from Cognizant WinZone</description>
    <inlineHelpText>Estimated revenue in the first 12 months regardless of when the contract is signed. Data pulled from Cognizant WinZone</inlineHelpText>
    <label>First Year $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>