force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Gross_TCV_Share__c.field-meta.xml
<CustomField>
    <fullName>Gross_TCV_Share__c</fullName>
    <description>Estimated Total Contract Value for each individual Service Line</description>
    <inlineHelpText>Estimated Total Contract Value for each individual Service Line</inlineHelpText>
    <label>Gross TCV $ Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>