force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Net_TCV_Share__c.field-meta.xml
<CustomField>
    <fullName>Net_TCV_Share__c</fullName>
    <description>The net increase in dollars after accounting for: rate adjustments, reduction of old work scope, and new work added to the opportunity.</description>
    <inlineHelpText>The net increase in dollars after accounting for: rate adjustments, reduction of old work scope, and new work added to the opportunity</inlineHelpText>
    <label>Net TCV $ Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>