force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/No_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>No_of_Resources__c</fullName>
    <description>This field captures the number of resources that will be staffed to this specific service implementation</description>
    <inlineHelpText>This field captures the number of resources that will be staffed to this specific service implementation. Data transferred from Cognizant&apos;s WinZone</inlineHelpText>
    <label>No. of Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>