force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Offering_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Offering_Solutions__c</fullName>
    <description>This field is used to store the offering of the corresponding Service. Data pulled from Cognizant WinZone.</description>
    <inlineHelpText>This field is used to store the offering of the corresponding Service. Data pulled from Cognizant WinZone.</inlineHelpText>
    <label>Offering/Solutions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core Revenue Stream</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>