force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>The Opportunity to which this Opportunity Service Line Item is related to. Any OSLI can only be related to one Opportunity</description>
    <inlineHelpText>The Opportunity to which this Opportunity Service Line Item is related to. Any OSLI can only be related to one Opportunity</inlineHelpText>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Line Items</relationshipLabel>
    <relationshipName>Opportunity_Service_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>