force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Point_of_Contact_for_the_OSLI__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_for_the_OSLI__c</fullName>
    <description>This field is used to store the Service Line Lead of the Service Line Item</description>
    <inlineHelpText>The Point of contact for this Service Line</inlineHelpText>
    <label>Point of Contact for the OSLI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>