force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <description>The &quot;Practice&quot; of this OSLI, as defined by Cognizant WinZone.</description>
    <inlineHelpText>The &quot;Practice&quot; of this OSLI, as defined by Cognizant WinZone.</inlineHelpText>
    <label>Practice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EAS_ATG</fullName>
                <label>EAS ATG</label>
            </value>
            <value>
                <fullName>EAS ATG</fullName>
                <default>true</default>
                <label>EAS ATG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>