force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Resource_Description__c.field-meta.xml
<CustomField>
    <fullName>Resource_Description__c</fullName>
    <description>Used to capture the description of the resources on this project. Data pulled directly from WinZone</description>
    <inlineHelpText>Used to capture the description of the resources on this project. Data pulled directly from WinZone</inlineHelpText>
    <label>Resource Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>