force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>The service that we are selling as part of this OSLI. Data pulled from Cognizant WinZone</description>
    <inlineHelpText>The service that we are selling as part of this OSLI. Data pulled from Cognizant WinZone</inlineHelpText>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Docusign - CLM</fullName>
            </value>
            <value>
                <fullName>Conga - CLM</fullName>
            </value>
            <value>
                <fullName>Cloud Other</fullName>
            </value>
            <value>
                <fullName>Legacy Quote to Cash</fullName>
            </value>
            <value>
                <fullName>goTransverse - Billing</fullName>
            </value>
            <value>
                <fullName>Logik.IO - CPQ</fullName>
            </value>
            <value>
                <fullName>Xactly - SPM</fullName>
            </value>
            <value>
                <fullName>Fusekit</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Q2C Advisory Projects</fullName>
            </value>
            <value>
                <fullName>Traditional/Conversion Velocity</fullName>
            </value>
            <value>
                <fullName>Revenue Cloud - CPQ</fullName>
            </value>
            <value>
                <fullName>Revenue Cloud - CPQ &amp; Billing</fullName>
            </value>
            <value>
                <fullName>Salesforce - B2B Commerce</fullName>
            </value>
            <value>
                <fullName>Salesforce - Application Support</fullName>
            </value>
            <value>
                <fullName>Salesforce - Vlocity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>