force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <inlineHelpText>Data Pulled from Cognizant WinZone</inlineHelpText>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software Product Group</fullName>
            </value>
            <value>
                <fullName>Market Consulting</fullName>
            </value>
            <value>
                <fullName>Digital Business &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Digital Business Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>