force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Service_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Item_Id__c</fullName>
    <description>Populated by accomanying Service Line Item ID in winzone. used for data upload and mapping</description>
    <externalId>true</externalId>
    <label>Service Line Item Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>