force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Split_of_TCV_for_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Split_of_TCV_for_Line_Item__c</fullName>
    <description>For opportunities with more than one Service Line, enter the split percent (%) shared across each Service Line.</description>
    <inlineHelpText>For opportunities with more than one Service Line, enter the split percent (%) shared across each Service Line.</inlineHelpText>
    <label>% Split_of_Gross TCV_$ for_Line_Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>