force-app/main/default/objects/Opportunity_Service_Line_Item__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Engagement</fullName>
            </value>
            <value>
                <fullName>2. Shaping</fullName>
            </value>
            <value>
                <fullName>3. Solutioning</fullName>
            </value>
            <value>
                <fullName>4. End-Game</fullName>
            </value>
            <value>
                <fullName>5. Negotiation</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Client Withdraw</fullName>
            </value>
            <value>
                <fullName>Cognizant Withdraw</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>