force-app/main/default/objects/Opportunity_Service_Line_Item__c/recordTypes/EAS.recordType-meta.xml
<RecordType>
    <fullName>EAS</fullName>
    <active>true</active>
    <label>EAS</label>
</RecordType>