force-app/main/default/objects/Opportunity_Service_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity_Name__c</columns>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Service_Line__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Practice__c</columns>
    <columns>Practice_Area__c</columns>
    <columns>Offering_Solutions__c</columns>
    <columns>Split_of_TCV_for_Line_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>